# rdkafka-callback-problem

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
