[package]
name = "rdkafka-callback-problem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
log = "0.4.17"
tokio = { version = "1", features = ["full"] }
# Kafka client library
rdkafka = { version = "0.36.0", features = ["libz", "tokio", "gssapi", "sasl",  "ssl-vendored", "zstd"] }
# Error Handling Library
snafu = { version = "0.7.5", features = ["backtraces", "futures", "std"] }
futures-channel = { version = "0.3.29", features = [] }
env_logger = "0.10.1"
time = "0.3.30"
async-trait = { version = "0.1.74", features = [] }
clap = "4.4.11"
config = "0.13.4"
serde = "1.0.193"
serde_json = "1.0.108"
